--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
+    "react-toastify": "^9.1.3",
     "cra-template": "1.2.0",
+    "firebase": "^10.7.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.6",
     "web-vitals": "^2.1.4"
