--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "firebase": "^10.7.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+     "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
