--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
     "react-toastify": "^9.1.3",
+    "react-hook-form": "^7.49.3",
     "cra-template": "1.2.0",
     "firebase": "^10.7.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.6",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
      "yup": "^1.3.3"
   },
