--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "cra-template": "1.2.0",
     "firebase": "^10.7.1",
     "react-scripts": "5.0.1",
+    "jquery": "^3.7.1",
+    "react-owl-carousel": "^2.3.3",
     "styled-components": "^6.1.6",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
