--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "firebase": "^10.7.1",
     "react-scripts": "5.0.1",
     "jquery": "^3.7.1",
+    "react-select": "^5.8.0",
     "react-owl-carousel": "^2.3.3",
     "styled-components": "^6.1.6",
     "uuid": "^9.0.1",
