--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@knocklabs/client": "^0.8.15",
+    "@knocklabs/node": "^0.6.0",
+    "@knocklabs/react-notification-feed": "^0.8.15",
     "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.3",
     "@mui/styled-engine-sc": "^6.0.0-alpha.11",
@@ -15,28 +18,30 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^4.3.0",
     "axios": "^1.6.4",
     "bootstrap": "^5.3.2",
+    "cra-template": "1.2.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
+    "firebase": "^10.7.1",
     "formik": "^2.4.5",
+    "jquery": "^3.7.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.0 || ^18.0.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^17.0.0 || ^18.0.0",
+    "react-hook-form": "^7.49.3",
+    "react-owl-carousel": "^2.3.3",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
-    "react-toastify": "^9.1.3",
-    "react-hook-form": "^7.49.3",
-    "cra-template": "1.2.0",
-    "firebase": "^10.7.1",
     "react-scripts": "5.0.1",
-    "jquery": "^3.7.1",
     "react-select": "^5.8.0",
-    "react-owl-carousel": "^2.3.3",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.1.6",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
-     "yup": "^1.3.3"
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -65,5 +70,8 @@
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.2"
   }
 }
